<resources>
    <string name="app_name">BrainTest</string>
    <string name="mainText"> 당신의 두뇌 성향 </string>
    <string name="mainStart"> 시작하기 </string>
    <string name="goNext">  다음 문항 </string>
    <string name="mainName">  당신의 이름을 입력해주세요 ex) 홍길동 </string>
    <string name="please"> 고민하지말고 바로 해보세요! </string>
    <string name="left"> 왼쪽 </string>
    <string name="right"> 오른쪽 </string>
    <string name="rightMusic"> 가사 </string>
    <string name="leftMusic"> 멜로디 </string>
    <string name="question1"> 손을 모아 깍지를 껴보세요! 오른쪽/왼쪽 중에 어느쪽 엄지손가락이 위에 있나요?  </string>
    <string name="question2"> 양손을 모아 팔짱을 껴보세요! 오른쪽/왼쪽 중에 어느 팔이 위에 있나요 ? </string>
    <string name="question3"> 양 다리를 편한 자세로 꼬아보세요! 오른쪽/왼쪽 중에 어느 다리가 위에 있나요 ? </string>
    <string name="question4"> 당신은 노래를 듣고 있습니다 노래의 가사와 멜로디 중에 어느쪽에 비중을 두고 듣고있나요? </string>
    <string name="question5"> 한쪽눈을 감고 다른 한쪽눈으로만 정면을보세요! 오른쪽/왼쪽 눈중에 어느쪽 눈을 뜨고있나요? </string>
    <string name="question6"> 양손을 가슴위에 모아보세요! 오른쪽/왼쪽 손중에 어느손이 위쪽에 있나요? </string>
    <string name="question7"> 1번 2번 중에서 "빨강" 은 무엇인가요?  </string>
    <string name="question7_a"> 1. 빨강 </string>
    <string name="question7_b"> 2. 파랑 </string>
    <string name="answer7_a"> 1 번</string>
    <string name="answer7_b"> 2 번</string>
    <string name="goResult"> 결과 확인 </string>
    <string name="resultLeft">님은 "좌뇌형" 입니다!</string>
    <string name="resultRight">님은 "우뇌형" 입니다!</string>
    <string name="left1"> 추상력</string>
    <string name="left2"> 언어사고력</string>
    <string name="left3"> 수리력</string>
    <string name="left4"> 추리력</string>
    <string name="finishApp">종료</string>
    <string name="left5">좌뇌형은 분석적이면서 계획적이며 현실적인 것을 선호합니다. 다만 창의성이 부족한 경향이 있고,계산적일 수 있습니다</string>
    <string name="left6"> 님은 의심없이 규칙이라면 따르는 경향이 있습니다 </string>
    <string name="left7"> 또한, 한번에 한가지씩 계획적이고 규칙적으로 일처리를 하는 경향이 있습니다 </string>
    <string name="left8"> 숲보다는 나무를 보는 편입니다  </string>
    <string name="left9"> 감정 컨트롤에 능합니다. 순간의 감정을 숨기는 능력이 탁월한 경향이 있습니다 </string>
    <string name="left10"> 암기나 기억에 능하여 사람의 이름기억을 잘하는 경향이 있습니다  </string>
    <string name="left11"> 남에게 쉽게 상처를 받으며, 윽박지르지 못하고 융통성이 없는 경향이 있습니다</string>
    <string name="left12"> 말하고 쓰는 것을 좋아하며, 행동파 유형과는 거리가 멉니다.</string>
    <string name="leftMbti"> MBTI 유형 :  ISTJ, ESTJ, ISTP, ISFJ, INTJ </string>
    <string name="right1"> 협응력 </string>
    <string name="right2"> 구성력 </string>
    <string name="right3"> 시각적 통찰력 </string>
    <string name="right4"> 지각속도력 </string>
    <string name="right5">상상력이 풍부하고 감상적입니다. 미술과 음악 같은 예체능 계열에 두각을 보이며, 긍정적인 성격이지만,계획없이 즉흥적일 수 있어 실수를 하기도합니다.</string>
    <string name="right6"> 님의 유형은 직관적이고 자유분방한 성격을 가지는 경향이 있습니다 </string>
    <string name="right7"> 또한, 계획적이기 보다는 한꺼번에 비계획적으로 일처리를 하는 경향이 있습니다 </string>
    <string name="right8"> 나무보다는 전체적인 숲을 보는 편입니다  </string>
    <string name="right9"> 감정 표현에 능합니다. 순간의 감정을 숨기지 못하는 경향이 있어 엉뚱하다는 소리를 들을 수 있습니다 </string>
    <string name="right10"> 창의적이고 감성적이며, 그림으로 파악하는 것을 좋아하는 경향이 있습니다 </string>
    <string name="right11"> 확실함 보다는 가능성을 중요시하는 경향이 있습니다 </string>
    <string name="right12"> 직관적인 것을 중요시하는 행동파이며, 계획형 유형과는 거리가 멉니다.</string>
    <string name="rightMbti"> MBTI 유형 :  INFP, ENFJ, ENTP, ESFP, ENFP  </string>
    <string name="RightFinalPage">다음</string>
    <string name="LeftFinalPage">다음</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>