<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selection7"
    android:background="@drawable/background"
 >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="132dp"
        android:layout_height="103dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/question7_b"
        android:textColor="#C80D0D"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="132dp"
        android:layout_height="103dp"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/question7_a"
        android:textColor="#C1AA8E"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="402dp"
        android:layout_height="132dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="224dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/question7"
        android:textColor="#F5FFFFFF"
        android:textColorLink="#E8FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please6">

        <RadioButton
            android:id="@+id/rightRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mainwriting"
            android:text="@string/answer7_a"
            android:textColor="#DCFFFFFF"
            android:checked="true"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/leftRadio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mainwriting"
            android:text="@string/answer7_b"
            android:textColor="#DCFFFFFF"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/please6"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/please"
        android:textColor="#E1FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="240dp"
        android:layout_height="67dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/font"
        android:text="@string/goResult"
        android:textSize="40sp"
        app:backgroundTint="#41FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

</androidx.constraintlayout.widget.ConstraintLayout>