<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RightBrain"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/textView54"
        android:layout_width="233dp"
        android:layout_height="62dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/rightMbti"
        android:textColor="#0B0000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="306dp"
        android:layout_height="54dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/right12"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/right11"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="299dp"
        android:layout_height="42dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/right10"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="312dp"
        android:layout_height="57dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/right9"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/right8"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="86dp"
        android:layout_height="37dp"
        android:background="#11EDD6D6"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:maxLines="1"
        android:text="TextView"
        android:textColor="#090909"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView46"
        app:layout_constraintEnd_toStartOf="@+id/textView45"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="268dp"
        android:layout_height="43dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/right6"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="320dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/right7"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="170dp"
        android:layout_height="147dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/right5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="56dp"
        android:layout_height="26dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/right2"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="68dp"
        android:layout_height="22dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/right3"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="56dp"
        android:layout_height="26dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/right4"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="56dp"
        android:layout_height="26dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/right1"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="123dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        app:srcCompat="@drawable/resultbrain" />

    <Button
        android:id="@+id/button8"
        android:layout_width="95dp"
        android:layout_height="52dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/font"
        android:text="@string/RightFinalPage"
        android:textSize="20sp"
        app:backgroundTint="#41FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/resultRight"
        android:textColor="#FDFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="106dp"
        android:layout_height="56dp"
        android:background="#11EDD6D6"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#FD050505"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />
</androidx.constraintlayout.widget.ConstraintLayout>