<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeftBrain"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/textView32"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/left12"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="248dp"
        android:layout_height="71dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/leftMbti"
        android:textColor="#010B01"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="301dp"
        android:layout_height="69dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/left11"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="293dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/left10"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="311dp"
        android:layout_height="49dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/left9"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.259" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/left7"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="266dp"
        android:layout_height="46dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/left8"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:background="#11EDD6D6"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|center_vertical"
        android:maxLines="1"
        android:text="TextView"
        android:textColor="#090909"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="46dp"
        android:layout_height="21dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/left4"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="53dp"
        android:layout_height="32dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/left1"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="58dp"
        android:layout_height="30dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/left2"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="46dp"
        android:layout_height="21dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/left3"
        android:textColor="#FAFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.607" />

    <Button
        android:id="@+id/button9"
        android:layout_width="95dp"
        android:layout_height="52dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/font"
        android:text="@string/finishApp"
        android:textSize="20sp"
        app:backgroundTint="#41FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/resultLeft"
        android:textColor="#FDFFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="106dp"
        android:layout_height="56dp"
        android:background="#11EDD6D6"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:maxLines="1"
        android:text="TextView"
        android:textColor="#F8040303"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="123dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/resultbrain" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="187dp"
        android:layout_height="145dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center"
        android:text="@string/left5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:fontFamily="@font/mainwriting"
        android:gravity="center|left"
        android:text="@string/left6"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.064" />

</androidx.constraintlayout.widget.ConstraintLayout>